--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npx nodemon",
     "build": "rimraf ./dist && tsc",
-    "start": "yarn build && node dist"
+    "start": "yarn build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
