--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "npx nodemon",
-    "build": "rimraf ./dist && tsc",
+    "build": "yarn && rimraf ./dist && tsc",
     "start": "yarn build && node dist/index.js"
   },
   "keywords": [],
