--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": ">=5.43.0",
     "@typescript-eslint/parser": ">=5.43.0",
-    "dotenv": "^16.0.3",
     "eslint": ">=8.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.55.1",
     "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": ">=4.4",
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
     "openai": "^3.1.0",
     "rimraf": "^3.0.2",
     "telegraf": "^4.11.2",
     "telegraf-session-local": "^2.1.0",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": ">=4.4",
     "uuid": "^9.0.0"
   },
   "engines": {
