--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": ">=4.4",
+    "typescript": ">=4.4"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
