--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "npx nodemon",
-    "build": "yarn && rimraf ./dist && tsc",
-    "start": "yarn build && node dist/index.js"
+    "build": "rimraf ./dist && tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
